# serializer version: 1
# name: test_failure_hook_with_pythonic_resource[https://foo.webhook.office.com/bar/baz]
  _CallList([
    _Call(
      tuple(
        'https://foo.webhook.office.com/bar/baz',
      ),
      dict({
        'headers': dict({
          'Content-Type': 'application/json',
        }),
        'json': dict({
          'attachments': list([
            dict({
              'content': dict({
                'text': "Some custom text <a href='localhost:3000/runs/b6497149-0b91-41ea-8a0f-442cb1704172'>View in Dagster UI</a>",
                'title': 'Dagster Pipeline Alert',
              }),
              'contentType': 'application/vnd.microsoft.card.hero',
            }),
          ]),
          'type': 'message',
        }),
        'proxies': None,
        'timeout': 60,
        'verify': True,
      }),
    ),
  ])
# ---
# name: test_failure_hook_with_pythonic_resource[https://foo.westus.logic.azure.com:443/workflows/8be36cde7f394925af220480f6701bd0]
  _CallList([
    _Call(
      tuple(
        'https://foo.westus.logic.azure.com:443/workflows/8be36cde7f394925af220480f6701bd0',
      ),
      dict({
        'headers': dict({
          'Content-Type': 'application/json',
        }),
        'json': dict({
          'attachments': list([
            dict({
              'content': dict({
                'body': list([
                  dict({
                    'text': 'Some custom text [View in Dagster UI](localhost:3000/runs/b6497149-0b91-41ea-8a0f-442cb1704172)',
                    'type': 'TextBlock',
                    'wrap': True,
                  }),
                ]),
                'type': 'AdaptiveCard',
                'version': '1.5',
              }),
              'contentType': 'application/vnd.microsoft.card.adaptive',
              'contentUrl': None,
            }),
          ]),
          'type': 'message',
        }),
        'proxies': None,
        'timeout': 60,
        'verify': True,
      }),
    ),
  ])
# ---
# name: test_success_hook_with_pythonic_resource[https://foo.webhook.office.com/bar/baz]
  _CallList([
    _Call(
      tuple(
        'https://foo.webhook.office.com/bar/baz',
      ),
      dict({
        'headers': dict({
          'Content-Type': 'application/json',
        }),
        'json': dict({
          'attachments': list([
            dict({
              'content': dict({
                'text': '''
                  Op pass_op on job job_def succeeded!
                  Run ID: b6497149-0b91-41ea-8a0f-442cb1704172
                ''',
                'title': 'Dagster Pipeline Alert',
              }),
              'contentType': 'application/vnd.microsoft.card.hero',
            }),
          ]),
          'type': 'message',
        }),
        'proxies': None,
        'timeout': 60,
        'verify': True,
      }),
    ),
    _Call(
      tuple(
        'https://foo.webhook.office.com/bar/baz',
      ),
      dict({
        'headers': dict({
          'Content-Type': 'application/json',
        }),
        'json': dict({
          'attachments': list([
            dict({
              'content': dict({
                'text': '''
                  Op success_solid_with_hook on job job_def succeeded!
                  Run ID: b6497149-0b91-41ea-8a0f-442cb1704172
                ''',
                'title': 'Dagster Pipeline Alert',
              }),
              'contentType': 'application/vnd.microsoft.card.hero',
            }),
          ]),
          'type': 'message',
        }),
        'proxies': None,
        'timeout': 60,
        'verify': True,
      }),
    ),
  ])
# ---
# name: test_success_hook_with_pythonic_resource[https://foo.westus.logic.azure.com:443/workflows/8be36cde7f394925af220480f6701bd0]
  _CallList([
    _Call(
      tuple(
        'https://foo.westus.logic.azure.com:443/workflows/8be36cde7f394925af220480f6701bd0',
      ),
      dict({
        'headers': dict({
          'Content-Type': 'application/json',
        }),
        'json': dict({
          'attachments': list([
            dict({
              'content': dict({
                'body': list([
                  dict({
                    'text': '''
                      Op pass_op on job job_def succeeded!
                      Run ID: b6497149-0b91-41ea-8a0f-442cb1704172
                    ''',
                    'type': 'TextBlock',
                    'wrap': True,
                  }),
                ]),
                'type': 'AdaptiveCard',
                'version': '1.5',
              }),
              'contentType': 'application/vnd.microsoft.card.adaptive',
              'contentUrl': None,
            }),
          ]),
          'type': 'message',
        }),
        'proxies': None,
        'timeout': 60,
        'verify': True,
      }),
    ),
    _Call(
      tuple(
        'https://foo.westus.logic.azure.com:443/workflows/8be36cde7f394925af220480f6701bd0',
      ),
      dict({
        'headers': dict({
          'Content-Type': 'application/json',
        }),
        'json': dict({
          'attachments': list([
            dict({
              'content': dict({
                'body': list([
                  dict({
                    'text': '''
                      Op success_solid_with_hook on job job_def succeeded!
                      Run ID: b6497149-0b91-41ea-8a0f-442cb1704172
                    ''',
                    'type': 'TextBlock',
                    'wrap': True,
                  }),
                ]),
                'type': 'AdaptiveCard',
                'version': '1.5',
              }),
              'contentType': 'application/vnd.microsoft.card.adaptive',
              'contentUrl': None,
            }),
          ]),
          'type': 'message',
        }),
        'proxies': None,
        'timeout': 60,
        'verify': True,
      }),
    ),
  ])
# ---
